Pet-Owner Relation Completed, and Added Logging For DashboardController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Optional: Show SQL in logs
 spring.jpa.show-sql=false
+
+logging.level.root=INFO
+logging.level.com.eidiko=DEBUG
+
